<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#300909"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="418dp"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/receipt" />

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMain"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backgroundrec" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bilbo_swash_caps"
        android:text="@string/split_the_bill"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerService"
        android:prompt="@string/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/cornersround"
        android:entries="@array/qualityOfServiceArray"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBackground" />

    <EditText
        android:id="@+id/etInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_the_total_bill_amount"
        android:inputType="number"
        android:minHeight="50dp"
        android:textColor="@color/white"
        android:textColorHint="#CCC3BEBE"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerService" />

    <EditText
        android:id="@+id/etInput2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/number_of_individuals_in_party"
        android:inputType="number"
        android:minHeight="50dp"
        android:textColor="@color/white"
        android:textColorHint="#CCC3BEBE"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInput1" />

    <Button
        android:id="@+id/CalcButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="#AC2323"
        android:text="@string/btnTextCost"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResults" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="#CCC3BEBE"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/bilbo_swash_caps"
        android:gravity="center_horizontal"
        android:text="@string/tvfifth"
        android:textColor="@color/material_dynamic_neutral95"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:hint="@string/calculate_individual_bill"
        android:textColor="@color/material_dynamic_neutral95"
        android:textColorHint="#CCC3BEBE"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInput2" />

</androidx.constraintlayout.widget.ConstraintLayout>